{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 93,
  "lineage": "36136e4b-7e30-f850-a8f1-c71d8722383c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087fe1b74145452c0",
            "association_id": "eipassoc-091612df2280d9442",
            "domain": "vpc",
            "id": "eipalloc-087fe1b74145452c0",
            "instance": "i-0eaf6d1e7206cb728",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09973cf709498e12c",
            "private_dns": "ip-172-16-37-185.eu-central-1.compute.internal",
            "private_ip": "172.16.37.185",
            "public_dns": "ec2-3-77-158-29.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.158.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_key_pair.public_key",
            "aws_security_group.webserver_SG",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ad2436e75246bba",
            "arn": "arn:aws:ec2:eu-central-1:783403793421:instance/i-0eaf6d1e7206cb728",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eaf6d1e7206cb728",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "obogzy-keys.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09973cf709498e12c",
            "private_dns": "ip-172-16-37-185.eu-central-1.compute.internal",
            "private_ip": "172.16.37.185",
            "public_dns": "ec2-3-77-158-29.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.158.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02827488a07c6b73f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aed3168cf5f8fff3",
            "tags": {
              "Name": "webserverVM"
            },
            "tags_all": {
              "Name": "webserverVM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0978ac5e9cf6c251a"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.webserver_SG",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webserver_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:783403793421:internet-gateway/igw-0201f927e196e270f",
            "id": "igw-0201f927e196e270f",
            "owner_id": "783403793421",
            "tags": {
              "Name": "webserver_gw"
            },
            "tags_all": {
              "Name": "webserver_gw"
            },
            "vpc_id": "vpc-0d73eb9b5717818cc"
          },
          "dependencies": [
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "websever_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:loadbalancer/app/test-lb-tf/0fb126fd3e735689",
            "arn_suffix": "app/test-lb-tf/0fb126fd3e735689",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1147815592.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:loadbalancer/app/test-lb-tf/0fb126fd3e735689",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0978ac5e9cf6c251a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ba58843c4f1c884"
              },
              {
                "subnet_id": "subnet-0aed3168cf5f8fff3"
              }
            ],
            "subnets": [
              "subnet-07ba58843c4f1c884",
              "subnet-0aed3168cf5f8fff3"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d73eb9b5717818cc",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.webserver_SG",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:listener/app/test-lb-tf/0fb126fd3e735689/7381530be962cc3d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:targetgroup/tf-example-lb-tg/3a0a6856c2550bd0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:listener/app/test-lb-tf/0fb126fd3e735689/7381530be962cc3d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:loadbalancer/app/test-lb-tf/0fb126fd3e735689",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.websever_lb",
            "aws_lb_target_group.webserver_TG",
            "aws_security_group.webserver_SG",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:listener-rule/app/test-lb-tf/0fb126fd3e735689/7381530be962cc3d/fb5cd51a60221dc0",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Forwarded-For",
                    "values": [
                      "172.16.8.*"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:listener-rule/app/test-lb-tf/0fb126fd3e735689/7381530be962cc3d/fb5cd51a60221dc0",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:listener/app/test-lb-tf/0fb126fd3e735689/7381530be962cc3d",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.websever_lb",
            "aws_lb_listener.front_end",
            "aws_security_group.webserver_SG",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webserver_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:targetgroup/tf-example-lb-tg/3a0a6856c2550bd0",
            "arn_suffix": "targetgroup/tf-example-lb-tg/3a0a6856c2550bd0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:targetgroup/tf-example-lb-tg/3a0a6856c2550bd0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d73eb9b5717818cc"
          },
          "dependencies": [
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:targetgroup/tf-example-lb-tg/3a0a6856c2550bd0-20230329122932800200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:783403793421:targetgroup/tf-example-lb-tg/3a0a6856c2550bd0",
            "target_id": "i-0eaf6d1e7206cb728"
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_key_pair.public_key",
            "aws_lb_target_group.webserver_TG",
            "aws_security_group.webserver_SG",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webserver_RTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:783403793421:route-table/rtb-0c93b4874f2750b63",
            "id": "rtb-0c93b4874f2750b63",
            "owner_id": "783403793421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0201f927e196e270f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webserver_RTB"
            },
            "tags_all": {
              "Name": "webserver_RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d73eb9b5717818cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webserver_gw",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webserver_RTB_AS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1eec67368dc4abe",
            "route_table_id": "rtb-0c93b4874f2750b63",
            "subnet_id": "subnet-0aed3168cf5f8fff3"
          },
          "dependencies": [
            "aws_internet_gateway.webserver_gw",
            "aws_route_table.webserver_RTB",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:783403793421:security-group/sg-0978ac5e9cf6c251a",
            "description": "Allows defined inbound traffic for this webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0978ac5e9cf6c251a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers_SG",
            "name_prefix": "",
            "owner_id": "783403793421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic"
            },
            "tags_all": {
              "Name": "allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d73eb9b5717818cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:783403793421:subnet/subnet-0aed3168cf5f8fff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aed3168cf5f8fff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783403793421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webservers-subnets"
            },
            "tags_all": {
              "Name": "webservers-subnets"
            },
            "vpc_id": "vpc-0d73eb9b5717818cc"
          },
          "dependencies": [
            "aws_vpc.webserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webserver_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:783403793421:vpc/vpc-0d73eb9b5717818cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05b04b79d8a11addb",
            "default_route_table_id": "rtb-06eb4977a1f120741",
            "default_security_group_id": "sg-0342cc852fb47b018",
            "dhcp_options_id": "dopt-06ef1ef8042bf7f82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d73eb9b5717818cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06eb4977a1f120741",
            "owner_id": "783403793421",
            "tags": {
              "Name": "webserver-test-vpc"
            },
            "tags_all": {
              "Name": "webserver-test-vpc"
            }
          }
        }
      ]
    }
  ]
}